--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,12 +6,12 @@ body {
   width: 100%;
   height: 100%;
   background: #DDD;
-  overflow: hidden;
 }
 div {
+  font-family: 'Noto Sans', sans-serif;
+  color: #555;
   position: absolute;
   width: 50%;
-  height: 80%;
   left: 25%;
   top: 34%;
   background: #FFF;
@@ -20,7 +20,10 @@ div {
   box-sizing: padding-box;
 }
 h1 {
-  font-family: 'Noto Sans', sans-serif;
   font-size: 36pt;
-  color: #333;
+}
+p {
+  font-size: 18pt;
+  line-height: 24pt;
+  margin-top: 12pt;
 }
