--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,29 +1,40 @@
 * {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 body {
-  width: 100%;
-  height: 100%;
-  background: #DDD;
+	background: #EEE;
 }
 div {
-  font-family: 'Noto Sans', sans-serif;
-  color: #555;
-  position: absolute;
-  width: 50%;
-  left: 25%;
-  top: 34%;
-  background: #FFF;
-  content: '';
-  padding: 16px;
-  box-sizing: padding-box;
+	font-family: 'Noto Sans', sans-serif;
+	color: #111;
+}
+.flex-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+@media all
+	and (max-width: 1200px){
+		.flex-container * { width: 80%;	}
+		h1 { font-size: 9vw; }
+}
+@media all
+	and (min-width: 1200px){
+		.flex-container * {	width: 960px; }
+		h1 { font-size: 108px; }
+}
+img {
+	float: left;
 }
 h1 {
-  font-size: 36pt;
+	font-weight: 700;
+	margin-bottom: 32px;
+	text-align: center;
 }
 p {
-  font-size: 18pt;
-  line-height: 24pt;
-  margin-top: 12pt;
+	font-size: 4vmin;
+	line-height: 6vmin;
+	margin-top: 3vmin;
 }
