--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -37,10 +37,11 @@ a:hover {
 	text-decoration: underline;
 }
 h1 {
-	font-size: 36pt;
+	font-size: 64pt;
 	font-family: 'Montserrat', sans-serif;
 }
 p {
-	font-size: 24pt;
+	font-size: 32pt;
 	font-family: 'Montserrat', serif;
+	line-height: 1.6em;
 }
