--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,32 +1,26 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	background: #3D3D3D;
+	background: #FFF;
 	margin: 0;
 	padding: 0;
 }
-canvas {
-	display: block;
-	vertical-align: bottom;
-}
-#particles-js {
+.avatar {
 	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 1;
-	background-color: #3D3D3D;
-	background-image: url('');
+	height: 50%;
+	overflow: hidden;
+	background: url("img/censoredeyes.jpg");
+	background-position: center;
 	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
 }
-#container {
-	position: absolute;
-	width: 90%;
-	top: 5%;
-	left: 5%;
-	color: #FFF;
-	z-index: 2;
+.body {
+	box-sizing: border-box;
+	height: 100%;
+	width: 100%;
+	padding: 5%;
+}
+.yellow {
+	background: #FFDC00;
 }
 a, a:visited {
 	color: #2ECC40;
