--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -22,6 +22,11 @@ html, body {
 .yellow {
 	background: #FFDC00;
 }
+#instafeed {
+	width: 100%;
+	height: auto;
+	display: flex;
+}
 a, a:visited {
 	color: #2ECC40;
 	text-decoration: none;
