--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -26,6 +26,13 @@ html, body {
 	width: 100%;
 	height: auto;
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+#instafeed img {
+	flex-grow: 1;
+	width: 30%;
+	height: auto;
 }
 a, a:visited {
 	color: #2ECC40;
