--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -4,6 +4,7 @@ html, body {
 	background: #FFF;
 	margin: 0;
 	padding: 0;
+	font-family: 'Montserrat', sans-serif;
 }
 .avatar {
 	width: 100%;
@@ -15,39 +16,101 @@ html, body {
 }
 .body {
 	box-sizing: border-box;
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	padding: 5%;
 }
 .yellow {
 	background: #FFDC00;
+	color: #BBB;
 }
+.black {
+	background: #111111;
+	color: #FFF;
+}
+.near-black {
+	background: #222222;
+	color: #FFF;
+}
+
+
 #instafeed {
 	width: 100%;
 	height: auto;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
+	justify-content: left;
 }
-#instafeed img {
-	flex-grow: 1;
-	width: 30%;
+.insta {
+	box-sizing: border-box;
+	max-width: 100%;
+	flex: 1 0 auto;
+	align-self: flex-start;
+	padding: 16px;
+}
+#instafeed a img {
+	width: 100%;
 	height: auto;
+}
+
+
+.cap {
+	font-size: 16pt;
+	margin-top: -2px;
+	line-height: 1.5em;
+	font-family: 'Montserrat', sans-serif;
 }
 a, a:visited {
 	color: #2ECC40;
 	text-decoration: none;
+}
+a:disabled {
+	color: #FF0000;
 }
 a:hover {
 	color: #2ECC40;
 	text-decoration: underline;
 }
 h1 {
-	font-size: 64pt;
+	font-size: 32pt;
 	font-family: 'Montserrat', sans-serif;
 }
-p {
+h2 {
+	font-size: 16pt;
+	font-family: 'Montserrat', sans-serif;
+}
+
+#load-more {
+	text-align: center;
+	font-weight: bold;
+	max-width: 33%;
+	padding: 16px;
+	height: 64px;
+	line-height: 64px;
+	vertical-align: middle;
+	border: 2px solid #2ECC40;
+}
+
+@media screen and (min-width: 600px) {
+.insta {
+	max-width: 50%;
+}
+h1 {
+	font-size: 48pt;
+}
+h2 {
+	font-size: 24pt;
+}
+}
+
+@media screen and (min-width: 1000px) {
+.insta {
+	max-width: calc(100% / 3);
+}
+h1 {
+	font-size: 64pt;
+}
+h2 {
 	font-size: 32pt;
-	font-family: 'Montserrat', serif;
-	line-height: 1.6em;
+}
 }
