--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -81,6 +81,7 @@ html, body {
 	width: 100%;
 	height: auto;
 	display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: left;
 }
