Updated copy and styling.
-all mention of looking for a job
+mention of looking for freelance work
*centered flex

--- a/res/standard.css
+++ b/res/standard.css
@@ -28,6 +28,10 @@ a:hover {
 	background: #222;
 	color: #FFF;
 }
+.bgGreen {
+	background: #2ECC40;
+	color: #FFF;
+}
 .bgYellow {
 	background: #FFDC00;
 	color: #111;
