--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -17,13 +17,14 @@ h2 {
 }
 
 p {
-	font-size: 16pt;
+	font-size: 20pt;
 	padding: 0;
+	line-height: 1.5em;
 }
 
 .flexer {
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	flex-flow: column nowrap;
 }
 
@@ -35,7 +36,7 @@ p {
 
 .flexable {
 	box-sizing: border-box;
-	align-self: flex-start;
+	align-self: center;
 	padding: 16pt;
 	margin: 16pt 0;
 }
