Beginning Major Redesign
Moving forward, johnnymcneil.com is going to serve as a hub for my ventures and projects. I will be using subdomains for future projects, the first one being a wordpress blog at blog.johnnymcneil.com

--- a/res/standard.css
+++ b/res/standard.css
@@ -42,3 +42,18 @@ a:hover {
 .noPadding {
 	padding: 0;
 }
+
+a.a-blue {
+	background: #0074D9;
+	color: #FFF;
+}
+
+a.a-button {
+	font-size: 18pt;
+	margin: 8pt;
+	padding: 8pt 16pt;
+}
+a.a-button:hover {
+	opacity: .9;
+	text-decoration: none;
+}
