--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,88 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,400;0,700;1,400&display=swap');
+
 * { padding: 0; margin: 0; }
-
-body {
-	background: #EEE;
-	box-sizing: border-box;
-	color: #222;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16pt;
-	font-weight: 400;
-	margin: 0;
-	padding: 0 5%;
-}
-
-.container {
-	max-width: 540pt;
-}
-.container > article, .container > footer, .container > header {
-	box-sizing: border-box;
-	margin: 12pt 0;
-	padding: 0 12pt;
-	position: relative;
-}
-
 a, a:visited {
 	color: #0074D9;
 	text-decoration: none;
 }
-
 a:disabled {
 	color: #FF0000;
 }
-
 a:hover {
 	color: #7FDBFF;
 	text-decoration: underline;
 }
-
-a.a-button {
-	background: #95958A;
-	border: 0;
-	border-bottom: 2pt solid #222218;
-	border-radius: 4pt;
-	color: #222;
+body {
+	background: #000;
+	box-sizing: border-box;
+	color: #FFF;
+	font-family: 'Cormorant', serif;
 	font-size: 16pt;
-	margin-right: 1.382em;
-	opacity: .9;
-	padding: 4pt 10pt;
+	font-weight: 400;
+	margin: 0;
+	padding: 0;
 }
-
-a.a-button:active {
-	border: 0;
-	position: relative;
-	top: 2pt;
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;
 }
-a.a-button:hover {
-	opacity: 1;
-	text-decoration: none;
-}
-
 h1 {
-	font-size: 2.441em;
+	font-size: 1.75em;
+	text-align: center;
 }
-
 h2 {
-	font-size: 1.953em;
+	font-size: .875em;
+	text-align: center;
 }
-
-article h1 {
-	font-size: 1.563em;
+header {
+	padding-top: 24pt;
 }
-
-article h2 {
-	font-size: 1.25em;
+header h1 {
+	font-size: 3em;
 }
-
-header > div {
-	padding: 1.618em 0;
+header h2 {
+	font-size: 1.5em;
 }
-
 p {
 	font-size: 1em;
 	line-height: 1.5em;
 	padding: 0;
 }
+#page-container {
+	position: relative;
+	min-height: 100vh;
+}
+#content-wrap {
+	margin: 0 auto;
+	padding-bottom: 2.5rem;
+}
+#content-wrap div {
+	margin-top: 24pt;
+}
+.max-width {
+	max-width: 1000pt;
+	margin: 0 auto;
+}
 
+.ascii-art {
+	font-family: monospace;
+	text-align: center;
+}
+.ascii-art p {
+	line-height: 1em;
+}
+
+/* Wizardy */
 @media screen
 	and (max-width: 599px) {
 		h1 {
