--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,400;0,700;1,400&display=swap');
 
-* { padding: 0; margin: 0; }
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 a, a:visited {
 	color: #0074D9;
 	text-decoration: none;
@@ -14,17 +18,13 @@ a:hover {
 }
 body {
 	background: #000;
-	box-sizing: border-box;
 	color: #FFF;
 	font-family: 'Cormorant', serif;
 	font-size: 16pt;
 	font-weight: 400;
-	margin: 0;
-	padding: 0;
 }
+
 footer {
-	position: absolute;
-	bottom: 0;
 	width: 100%;
 	height: 2.5rem;
 }
@@ -52,15 +52,24 @@ p {
 }
 #page-container {
 	position: relative;
-	min-height: 100vh;
+	min-height: 100%;
 }
 #content-wrap {
-	margin: 0 auto;
-	padding-bottom: 2.5rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
 }
 #content-wrap div {
+	-webkit-box-flex: 1;
+    -ms-flex: 1;
+	flex: 1;
 	margin-top: 24pt;
 }
+
 .max-width {
 	max-width: 1000pt;
 	margin: 0 auto;
@@ -69,18 +78,23 @@ p {
 .ascii-art {
 	font-family: monospace;
 	text-align: center;
+	font-size: 100%;
 }
 .ascii-art p {
 	line-height: 1em;
+	font-size: 1.5vmin;
 }
 
 /* Wizardy */
 @media screen
 	and (max-width: 599px) {
-		h1 {
-			font-size: 36pt;
-		}
-		h2 {
-			font-size: 24pt;
+		.max-width {
+			max-width: 100%;
 		}
 }
+/*@media screen and (max-width: 1099px) {
+	.ascii-art p {
+		font-size: 1em;
+	}
+}
+*/
