--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -5,6 +5,10 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+*:before,
+*:after {
+	box-sizing: border-box;
+}
 a, a:visited {
 	color: #0074D9;
 	text-decoration: none;
@@ -16,17 +20,25 @@ a:hover {
 	color: #7FDBFF;
 	text-decoration: underline;
 }
-body {
+body,
+html {
 	background: #000;
 	color: #FFF;
 	font-family: 'Cormorant', serif;
 	font-size: 16pt;
 	font-weight: 400;
+	height: 100%;
+	position: relative;
 }
-
 footer {
+	bottom: 0;
+	height: 108pt;
+	position: absolute;
+	vertical-align: center;
 	width: 100%;
-	height: 2.5rem;
+}
+footer h2 {
+	line-height: 108pt;
 }
 h1 {
 	font-size: 1.75em;
@@ -51,38 +63,31 @@ p {
 	padding: 0;
 }
 #page-container {
+	display: block;
+	min-height: 100vh;
+	overflow: hidden;
+	padding-bottom: 108pt;
 	position: relative;
-	min-height: 100%;
 }
-#content-wrap {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-}
-#content-wrap div {
-	-webkit-box-flex: 1;
-    -ms-flex: 1;
-	flex: 1;
+#page-container div {
 	margin-top: 24pt;
 }
 
 .max-width {
-	max-width: 1000pt;
 	margin: 0 auto;
+	max-width: 1000pt;
+	padding: 0 12pt;
 }
 
 .ascii-art {
+	color: #0F0;
 	font-family: monospace;
-	text-align: center;
 	font-size: 100%;
+	text-align: center;
 }
 .ascii-art p {
-	line-height: 1em;
 	font-size: 1.5vmin;
+	line-height: 1em;
 }
 
 /* Wizardy */
@@ -92,9 +97,3 @@ p {
 			max-width: 100%;
 		}
 }
-/*@media screen and (max-width: 1099px) {
-	.ascii-art p {
-		font-size: 1em;
-	}
-}
-*/
